--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
